# ffmpeg-cpp-linux

./: .gitignore  CMakeLists.txt  README.md  build.sh  ffmpegcpp-config-version.cmake.in  ffmpegcpp-config.cmake  meson.build
.github/workflows/: c-cpp.yml  main.yml
examples/: CMakeLists.txt  meson.build
examples/decode_audio/: CMakeLists.txt  decode_audio.cpp
examples/decode_stream/: CMakeLists.txt  decode_stream.cpp  stream_srv.sh
examples/decode_video/: CMakeLists.txt  decode_video.cpp
examples/demo/: CMakeLists.txt  GeneratedAudioSource.h  GeneratedVideoSource.h  demo.cpp
examples/difference/: CMakeLists.txt  difference.cpp
examples/encode_audio/: CMakeLists.txt  encode_audio.cpp
examples/encode_video/: CMakeLists.txt  encode_video.cpp
examples/filtering_audio/: CMakeLists.txt  filtering_audio.cpp
examples/filtering_video/: CMakeLists.txt  filtering_video.cpp
examples/print_info/: CMakeLists.txt  print_info.cpp
examples/remuxing/: CMakeLists.txt  remuxing.cpp
feasibility_tests/: meson.build
feasibility_tests/duration/: duration.cpp
include/ffmpegcpp/: FFmpegException.h  OpenCodec.h  VideoFormatConverter.h  config.hpp  ffmpeg.h  ffmpegcpp.h
include/ffmpegcpp/codecs/: AudioCodec.h  Codec.h  VideoCodec.h
include/ffmpegcpp/demuxing/: AudioInputStream.h  InputStream.h  StreamData.h  VideoInputStream.h
include/ffmpegcpp/framesinks/: AudioEncoder.h  AudioFrameSink.h  Filter.h  FrameSink.h  FrameSinkStream.h  FrameWriter.h  OneInputFrameSink.h  VideoEncoder.h  VideoFilterInput.h  VideoFrameSink.h
include/ffmpegcpp/info/: AudioStreamInfo.h  ContainerInfo.h  VideoStreamInfo.h
include/ffmpegcpp/muxing/: AudioOutputStream.h  Muxer.h  OutputStream.h  VideoOutputStream.h
include/ffmpegcpp/sources/: Demuxer.h  EncodedFileSource.h  InputSource.h  RawAudioDataSource.h  RawAudioFileSource.h  RawVideoDataSource.h  RawVideoFileSource.h
src/: AudioCodec.cpp  AudioEncoder.cpp  AudioFilter.cpp  AudioFormatConverter.cpp  AudioInputStream.cpp  AudioOutputStream.cpp  CMakeLists.txt  Codec.cpp  CodecDeducer.cpp  Demuxer.cpp  EncodedFileSource.cpp  FFmpegException.cpp  Filter.cpp  FrameContainer.cpp  FrameSinkStream.cpp  H264NVEncCodec.cpp  H265NVEncCodec.cpp  InputStream.cpp  JPGCodec.cpp  Muxer.cpp  OneInputFrameSink.cpp  OpenCodec.cpp  OutputStream.cpp  PNGCodec.cpp  RawAudioDataSource.cpp  RawAudioFileSource.cpp  RawVideoDataSource.cpp  RawVideoFileSource.cpp  VP9Codec.cpp  VideoCodec.cpp  VideoEncoder.cpp  VideoFilterInput.cpp  VideoFormatConverter.cpp  VideoInputStream.cpp  VideoOutputStream.cpp  ffmpegcpp-config.cmake  meson.build
