src = files(
    'AudioCodec.cpp',
    'AudioOutputStream.cpp',
    'FFmpegException.cpp',
    'H265NVEncCodec.cpp',
    'OpenCodec.cpp',
    'RawVideoDataSource.cpp',
    'VideoFilterInput.cpp',
    'AudioEncoder.cpp',
    'Codec.cpp',
    'Filter.cpp',
    'InputStream.cpp',
    'OutputStream.cpp',
    'RawVideoFileSource.cpp',
    'VideoFormatConverter.cpp',
    'AudioFilter.cpp',
    'CodecDeducer.cpp',
    'FrameContainer.cpp',
    'JPGCodec.cpp',
    'PNGCodec.cpp',
    'StreamData.cpp',
    'VideoInputStream.cpp',
    'AudioFormatConverter.cpp',
    'Demuxer.cpp',
    'FrameSinkStream.cpp',
    'Muxer.cpp',
    'RawAudioDataSource.cpp',
    'VideoCodec.cpp',
    'VideoOutputStream.cpp',
    'AudioInputStream.cpp',
    'EncodedFileSource.cpp',
    'H264NVEncCodec.cpp',
    'OneInputFrameSink.cpp',
    'RawAudioFileSource.cpp',
    'VideoEncoder.cpp',
    'VP9Codec.cpp'
)
